# burrow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml
src/burrow/: cli.py  config.py  output.py  tunnel.py
src/burrow/commands/: config.py  describe.py  dig.py  query.py  shell.py
tests/: test_cli.py  test_commands_query.py  test_config.py  test_output.py
